FlightPath 5.x Changelog
========================

2017-03-27
  Fixed a bug where substitutions and moved courses were not showing up correctly
  immediately after changing a degree option (like adding or removing a track).  This
  was due to the FlightPath object not using the same reference to the student object
  after a non-cache load.
  
  Fixed an issue where hooks could not always be invoked from hook_init.  This was
  because hook_init was being called as soon as the module was loaded.  Instead, the logic
  was changed so that all modules are loaded first, THEN hook_init is called.


2017-03-15
  Fixed another bug where courses worth zero hours were not showing up in lists correctly.
  

2017-03-14
  Fixed bug where course->load_descriptive_data() actually reset bool_ghost_hour booleans
  for courses.  This meant that courses worth MORE than zero hours in the database would show up as worth
  1 hour, even if they earned zero hours.  Added a simple argument to disable that behavior, FALSE by default.
  
  The same bug was causing ghost hour courses to show as worth "1 hour" in popups.
    

2017-03-09
  Fixed bug where course repeats were not being excluded correctly.
  
  Fixed bug where a course could not be removed from a group if it was being used as a sub in a different degree's group.
  

2017-03-05
  Added new course sort policy (to be considered in 'beta' for the time being,
  which allows to select highest grade, exclude other attempts.


2017-02-19
  Fixed bug in duplicating degrees re: groups with var hours.

  Added a hook to allow modules to modify a term_id prior to getting its description.


2017-02-11
  Fixed another bug relating to the logic of pulling up a student when two advisors are
  working on the student at the same time.

  Modified some logic in _FlightPath to accomodate the double advisor issue bug.


2017-02-07
  Fixed advising session bug where advisors working at the same time on the same student might see